# LangGraph-Sandbox

./: .gitignore  BIND_MODE_SESSION_LOGGING.md  Dockerfile  Dockerfile.sandbox  MANIFEST.in  README.md  docker-compose.override.yml  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt  sandbox.env  sandbox.env.example  setup.py  test_bind_logging.py
example_llm_data/: attivita-elenco-laboratori-alimentari.parquet  dataset-pubblicati.parquet  statistical_zones.parquet  teatri-cinema.parquet  temperatures.parquet
langgraph_app/: code_exec_tool.py  make_graph.py
langgraph_app/tools/: code_exec_tool.py  ds_loader_tool.py
langgraph_sandbox/: __init__.py  config.py  main.py
langgraph_sandbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
langgraph_sandbox/artifacts/: __init__.py  api.py  ingest.py  reader.py  store.py  tokens.py
langgraph_sandbox/dataset_manager/: __init__.py  cache.py  fetcher.py  selector.py  staging.py  startup.py  sync.py
langgraph_sandbox/datasets/: __init__.py  fetcher.py  selector.py  startup.py  sync.py
langgraph_sandbox/langgraph_sandbox.egg-info/: SOURCES.txt  requires.txt  top_level.txt
langgraph_sandbox/sandbox/: __init__.py  container_utils.py  io.py  repl_server.py  session_manager.py  session_viewer.py
langgraph_sandbox/setup/: __init__.py  __main__.py  env_example_new  sandbox.env.example
langgraph_sandbox/tool_factory/: __init__.py  make_tools.py
sandbox/: Dockerfile
src/: __init__.py  config.py  main.py  make_graph.py  prompt.py  sandbox_runner.py  session_manager.py  tools.py
src/artifacts/: __init__.py  api.py  ingest.py  reader.py  store.py  tokens.py
src/datasets/: __init__.py  cache.py  fetcher.py  selector.py  staging.py  startup.py  sync.py
src/graph/: prompt.py  tools.py
src/langgraph_sandbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/llm_data/: attivita-elenco-acconciatori-barbieri-estetisti-tatuatori.parquet  centraline_qualita_aria_2025.parquet  elenco-delle-scuole.parquet  elenco_parchi_giardini_con_posizione.parquet  eventi-bologna-agenda-cultura.parquet  impianti_sportivi_comunali.parquet  indicatori-raccolta-differenziata.parquet  indicatori-rifiuti-urbani.parquet  median_income_by_statistical_area.parquet  neighborhood_residents_data_1986to2024.parquet  neighborhood_socio_demographic_data_lastupdated2019.parquet  neighborhoods.parquet  pharmacies.parquet  points_of_interest.parquet  portici.parquet  portici_punti_di_interesse.parquet  public_bathrooms.parquet  rainfall.parquet
src/sandbox/: __init__.py  container_utils.py  io.py  repl_server.py  session_manager.py  session_viewer.py
tests/: test_artifact_descriptor_url.py  test_artifact_download_api.py  test_artifact_env_vars.py  test_artifact_ingest.py  test_artifact_reader.py  test_bind_logging.py  test_cache.py  test_cache_clearing.py  test_config.py  test_dataset_filesystem_loading.py  test_hybrid_mode.py  test_integration_pipeline.py  test_io_put_bytes.py  test_session.py  test_session_manager_modes.py  test_staging.py
usage_examples/: README.MD  __init__.py
(+46 files in other folders)
