[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-sandbox"
version = "0.1.0"
description = "A sandbox environment for LangGraph with artifact storage and dataset management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Matteo Falcioni"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "langgraph==0.6.7",
    "langgraph-checkpoint==2.1.0",
    "langchain-core==0.3.75",
    "langchain-community==0.3.29",
    "langchain-openai==0.3.32",
    "openai==1.106.1",
    "pydantic==2.11.7",
    "typing_extensions>=4.10",
    "python-dotenv==1.1.1",
    "docker==7.1.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "orjson==3.10.18",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
langgraph-sandbox = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "usage_examples*"]

[tool.setuptools.package-data]
"*" = ["*.env", "*.txt", "*.md"]
